##*****************************************************************************
## $Id: Makefile.am,v 1.10 2007-09-10 23:08:04 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-rpm.mk

DISTCHECK_CONFIGURE_FLAGS = --with-perl-install-destdir=$$dc_install_base

SUBDIRS = src man etc

EXTRA_DIST = META DISCLAIMER README.expat whatsup.spec
