##*****************************************************************************
## $Id: Makefile.am,v 1.11 2007-10-16 23:55:22 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include $(top_srcdir)/config/Make-rpm.mk

DISTCHECK_CONFIGURE_FLAGS = --with-perl-install-destdir=$$dc_install_base

SUBDIRS = src man etc

EXTRA_DIST = META DISCLAIMER DISCLAIMER.UC README.expat whatsup.spec
