##*****************************************************************************
## $Id: Makefile.am,v 1.12 2007-10-17 00:24:59 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DISTCHECK_CONFIGURE_FLAGS = --with-perl-install-destdir=$$dc_install_base

SUBDIRS = src man etc

EXTRA_DIST = META DISCLAIMER DISCLAIMER.UC README.expat whatsup.spec
