##*****************************************************************************
## $Id: Makefile.am,v 1.12 2005-05-10 18:24:49 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

if !WITH_STATIC_MODULES
DYNAMIC_MODULES_MANPAGES = nodeupdown_module.3
endif

man1_MANS = whatsup.1

man3_MANS = \
	libnodeupdown.3 \
	nodeupdown.3 \
	nodeupdown_handle_create.3 \
	nodeupdown_handle_destroy.3 \
	nodeupdown_load_data.3 \
	nodeupdown_errnum.3 \
	nodeupdown_strerror.3 \
	nodeupdown_errormsg.3 \
	nodeupdown_perror.3 \
	nodeupdown_get_up_nodes_string.3 \
	nodeupdown_get_down_nodes_string.3 \
	nodeupdown_get_up_nodes_list.3 \
	nodeupdown_get_down_nodes_list.3 \
	nodeupdown_is_node_up.3 \
	nodeupdown_is_node_down.3 \
	nodeupdown_up_count.3 \
	nodeupdown_down_count.3 \
	nodeupdown_nodelist_create.3 \
	nodeupdown_nodelist_clear.3 \
	nodeupdown_nodelist_destroy.3 \
	$(DYNAMIC_MODULES_MANPAGES)

man5_MANS = nodeupdown.conf.5

EXTRA_DIST = \
	libnodeupdown.3 \
	nodeupdown.3 \
	nodeupdown_handle_create.3 \
	nodeupdown_handle_destroy.3 \
	nodeupdown_load_data.3 \
	nodeupdown_errnum.3 \
	nodeupdown_strerror.3 \
	nodeupdown_errormsg.3 \
	nodeupdown_perror.3 \
	nodeupdown_get_up_nodes_string.3 \
	nodeupdown_get_down_nodes_string.3 \
	nodeupdown_get_up_nodes_list.3 \
	nodeupdown_get_down_nodes_list.3 \
	nodeupdown_is_node_up.3 \
	nodeupdown_is_node_down.3 \
	nodeupdown_up_count.3 \
	nodeupdown_down_count.3 \
	nodeupdown_nodelist_create.3 \
	nodeupdown_nodelist_clear.3 \
	nodeupdown_nodelist_destroy.3 \
	$(DYNAMIC_MODULES_MANPAGES) \
	nodeupdown.conf.5
