##*****************************************************************************
## $Id: Makefile.am,v 1.8 2006-07-07 18:14:15 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = \
	libcommon     \
	libexpat      \
	libnodeupdown \
	whatsup       \
	pingd         \
	Libnodeupdown \
	Nodeupdown 
