##*****************************************************************************
## $Id: Makefile.am,v 1.9 2006-07-10 17:44:37 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

if WITH_PINGD
   PINGDMAKE = pingd
endif

SUBDIRS = \
	libcommon     \
	libexpat      \
	libnodeupdown \
	whatsup       \
	Libnodeupdown \
	Nodeupdown    \
	$(PINGDMAKE)
