##*****************************************************************************
## $Id: Makefile.am,v 1.10 2006-08-29 20:44:01 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

if WITH_PINGD
   PINGDMAKE = pingd
endif

SUBDIRS = \
	libcommon     \
	libexpat      \
	libnodeupdown \
	whatsup       \
	scripts       \
	Libnodeupdown \
	Nodeupdown    \
	$(PINGDMAKE)
