##*****************************************************************************
## $Id: Makefile.am,v 1.1 2003-11-24 16:13:19 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

noinst_LTLIBRARIES = libdotconf.la

libdotconf_la_SOURCES = dotconf.c readdir.c
