##*****************************************************************************
## $Id: Makefile.am,v 1.1 2003-11-24 16:13:19 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

noinst_LTLIBRARIES = libexpat.la

# xmltok_impl.c and xmltok_ns.c are #included by xmltok.c, they
# should not be compiled.

libexpat_la_SOURCES = xmlparse.c xmlrole.c xmltok.c
